Fix navbar letter spacing

--- a/Styles/navbar.scss
+++ b/Styles/navbar.scss
@@ -16,6 +16,7 @@
             
             a
             {
+                letter-spacing: 1.1px;
                 text-decoration: none;
                 color: $color;
                 transition: all 0.3s;
